apps/libreddit/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: libreddit
  name: libreddit
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: libreddit
  type: ClusterIP
