apps/libreddit/bluey/ingress-external.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: libreddit-external
  namespace: libreddit
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - libreddit-e.babyvelociraptor.com
    secretName: libreddit-e-tls
  rules:
    - host: libreddit-e.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libreddit
                port:
                  name: web
