apps/libreddit/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: libreddit
  namespace: libreddit
spec:
  ingressClassName: nginx
  rules:
    - host: libreddit.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libreddit
                port:
                  name: web
